k8s/mongodb-restore-pv.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: yelp
spec:
  serviceName: mongodb-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-mongodb-0
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: yelp
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
