k8s/aws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelp-alb-ingress
  namespace: yelp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/group.name: yelp-alb
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /restaurants
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8002
          - path: /owner
            pathType: Prefix
            backend:
              service:
                name: owner-service
                port:
                  number: 8003
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 8004
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
