k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelp-ingress
  namespace: yelp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: yelp.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /restaurants
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 8002
          - path: /owner
            pathType: Prefix
            backend:
              service:
                name: owner-service
                port:
                  number: 8003
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 8004
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
